# rush-cleaner

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PYTHON.md  PYTHON_BEST_PRACTICES.md  README.md  README_CONFIG.md  REFACTORING_REPORT.md  REFACTORING_SUMMARY.md  generate_outputs.sh  install.ps1  install.sh  pyproject.toml  real_timeline_export_davinci.fcpxml  requirements.txt
.cursor/rules/: python-env.mdc
derush/: __init__.py  cli.py  config.py  cutter.py  exceptions.py  gradio_app.py  media_info.py  models.py  transcriber.py
derush/exporters/: __init__.py  base.py  debug.py  edl.py  fcpxml.py  json.py
output/: sample.edl  sample.fcpxml  sample.json
src/: cli.py  config.py  cutter.py  filler_detector.py  media_info.py  models.py  silence_detector.py  transcriber.py
src/exporters/: __init__.py  base.py  edl.py  fcpxml.py  json.py  json_export.py
tests/: conftest.py  test_classification.py  test_cli.py  test_correction.py  test_cuts_coherence.py  test_cutter.py  test_exporters.py  test_fcpxml_quality.py  test_filler_detector.py  test_integration.py  test_keep_segments.py  test_media_info.py  test_robustness.py  test_silence_detector.py  test_smoke.py  test_transcriber.py
tests/fixtures/: expected.json  expected.txt  sample-with-cut-padding-0-1-fixed.fcpxml  sample-with-cut-padding-0-1.fcpxml  sample.fcpxml  sample.json  sample_expected.json  sample_whisperx.json
