[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "derush"
version = "0.1.0"
description = "Video derushing tool - automatically detect silences and filler words for video editing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
authors = [
    {name = "VinceHi", email = "contact@vincehi.fr"}
]
keywords = ["video", "editing", "transcription", "whisper", "silence-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "whisperx==3.8.1",
    "typer>=0.9.0,<1.0.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
lint = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
dev = [
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/vincentsourice/derush"
Repository = "https://github.com/vincentsourice/derush"
Issues = "https://github.com/vincentsourice/derush/issues"

[project.scripts]
derush = "derush.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["derush", "derush.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["derush"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
